# trajectory-prediction

./: .env.example  .gitignore  README.md  __init__.py  init_project.py  main.py  pyproject.toml  requirements.txt
config/: __init__.py  settings.py
data/: __init__.py  downloader.py  loader.py
evaluation/: __init__.py  metrics.py  visualization.py
features/: __init__.py  augmentation.py  cleaning.py  clustering.py  engineering.py  outlier_detection.py
models/: __init__.py  base_model.py  model_factory.py
reports/: pipeline_report.txt
scripts/: optuna_short.py  quick_experiment.py  test_ensemble.py  test_lgbm_warnings.py  tune_gb.py  tune_gb_clean.py
submission/: __init__.py  generator.py
tools/: __init__.py  scanner.py
training/: __init__.py  cross_validation.py  metrics.py  trainer.py
utils/: __init__.py  logger.py
